// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usePanels should expand all panels when the defaultExpandedIndex is -1 1`] = `
<div>
  <div
    data-testid="list"
  >
    <div
      class="rmd-card rmd-card--shadowed rmd-card--full-width rmd-expansion-panel rmd-expansion-panel--expanded"
      data-testid="panel-1"
      id="panel-1-container"
    >
      <button
        aria-expanded="true"
        class="rmd-button-unstyled rmd-expansion-panel__header"
        id="panel-1"
        type="button"
      >
        Header 1
        <span
          class="rmd-expansion-panel__icon"
        >
          <i
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated"
          >
            keyboard_arrow_down
          </i>
        </span>
      </button>
      <div
        aria-labelledby="panel-1"
        class="rmd-card__content rmd-card__content--padded rmd-card__content--remove-margin rmd-card__content--secondary rmd-collapse"
        id="panel-1-content"
        role="region"
      >
        Content 1
        <label
          for="panel-1-input"
        >
          Label
        </label>
        <input
          id="panel-1-input"
          type="text"
        />
      </div>
    </div>
    <div
      class="rmd-card rmd-card--shadowed rmd-card--full-width rmd-expansion-panel rmd-expansion-panel--expanded rmd-expansion-panel--margin-top"
      data-testid="panel-2"
      id="panel-2-container"
    >
      <button
        aria-expanded="true"
        class="rmd-button-unstyled rmd-expansion-panel__header"
        id="panel-2"
        type="button"
      >
        Header 2
        <span
          class="rmd-expansion-panel__icon"
        >
          <i
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated"
          >
            keyboard_arrow_down
          </i>
        </span>
      </button>
      <div
        aria-labelledby="panel-2"
        class="rmd-card__content rmd-card__content--padded rmd-card__content--remove-margin rmd-card__content--secondary rmd-collapse"
        id="panel-2-content"
        role="region"
      >
        Content 2
        <label
          for="panel-2-input"
        >
          Label
        </label>
        <input
          id="panel-2-input"
          type="text"
        />
      </div>
    </div>
    <div
      class="rmd-card rmd-card--shadowed rmd-card--full-width rmd-expansion-panel rmd-expansion-panel--expanded rmd-expansion-panel--margin-top"
      data-testid="panel-3"
      id="panel-3-container"
    >
      <button
        aria-expanded="true"
        class="rmd-button-unstyled rmd-expansion-panel__header"
        id="panel-3"
        type="button"
      >
        Header 3
        <span
          class="rmd-expansion-panel__icon"
        >
          <i
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated"
          >
            keyboard_arrow_down
          </i>
        </span>
      </button>
      <div
        aria-labelledby="panel-3"
        class="rmd-card__content rmd-card__content--padded rmd-card__content--remove-margin rmd-card__content--secondary rmd-collapse"
        id="panel-3-content"
        role="region"
      >
        Content 3
        <label
          for="panel-3-input"
        >
          Label
        </label>
        <input
          id="panel-3-input"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`usePanels should provide the correct props to be passed to an ExpansionList and a list of ExpansionPanel components 1`] = `
<div>
  <div
    data-testid="list"
  >
    <div
      class="rmd-card rmd-card--shadowed rmd-card--full-width rmd-expansion-panel"
      data-testid="panel-1"
      id="panel-1-container"
    >
      <button
        class="rmd-button-unstyled rmd-expansion-panel__header"
        id="panel-1"
        type="button"
      >
        Header 1
        <span
          class="rmd-expansion-panel__icon"
        >
          <i
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
          >
            keyboard_arrow_down
          </i>
        </span>
      </button>
    </div>
    <div
      class="rmd-card rmd-card--shadowed rmd-card--full-width rmd-expansion-panel"
      data-testid="panel-2"
      id="panel-2-container"
    >
      <button
        class="rmd-button-unstyled rmd-expansion-panel__header"
        id="panel-2"
        type="button"
      >
        Header 2
        <span
          class="rmd-expansion-panel__icon"
        >
          <i
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
          >
            keyboard_arrow_down
          </i>
        </span>
      </button>
    </div>
    <div
      class="rmd-card rmd-card--shadowed rmd-card--full-width rmd-expansion-panel"
      data-testid="panel-3"
      id="panel-3-container"
    >
      <button
        class="rmd-button-unstyled rmd-expansion-panel__header"
        id="panel-3"
        type="button"
      >
        Header 3
        <span
          class="rmd-expansion-panel__icon"
        >
          <i
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
          >
            keyboard_arrow_down
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;
